# stepan

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  index.html
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report_en.yml  bug_report_uk.yml  config.yml  feature_request_en.yml  feature_request_uk.yml
.github/workflows/: ci.yml
cmake/: MacOSXBundleInfo.plist.in  stepan.desktop.in  version.h.in
docs/: index.html
installer/: stepan.nsi
resources/: app.icns  app.rc.in  map.html  resources.qrc
scripts/: build-linux.sh  build-macos.sh  build-windows.bat
src/: AboutDialog.cpp  AppLocale.h  AutoStart.cpp  AutoStart.h  BulkMarkersDialog.cpp  BulkMarkersDialog.h  CoordinateData.h  CoordinateParser.cpp  CoordinateParser.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  SettingsDialog.cpp  SettingsDialog.h  TrayManager.cpp  TrayManager.h  WebServer.cpp  WebServer.h  main.cpp
